# eecs571_task_offloading

./: .gitignore  Makefile  README.md
src/command_center/scheduler/: scheduler.cpp  scheduler.hpp
turtlebot4_ws/: turtlebot4_setup.sh
turtlebot4_ws/src/offload_simulator/offload_agent_gz_bringup/: CMakeLists.txt  package.xml
turtlebot4_ws/src/offload_simulator/offload_agent_gz_bringup/config/: localization.yaml  offload_agent_node.yaml  offload_server_node.yaml
turtlebot4_ws/src/offload_simulator/offload_agent_gz_bringup/launch/: offload_agent_gz.launch.py  offload_agent_nodes.launch.py  offload_agent_spawn.launch.py  offload_localization.launch.py  offload_localization_launch.py  offload_server_nodes.launch.py  ros_gz_bridge.launch.py  sim.launch.py
turtlebot4_ws/src/offload_simulator/offload_agent_gz_plugins/: CMakeLists.txt  package.xml
turtlebot4_ws/src/offload_simulator/offload_agent_gz_toolbox/: CMakeLists.txt  package.xml
turtlebot4_ws/src/offload_simulator/offload_agent_simulator/: CMakeLists.txt  package.xml
turtlebot4_ws/src/task_offloading/offload_agent/: CMakeLists.txt  package.xml
turtlebot4_ws/src/task_offloading/offload_agent/config/: localization.yaml
turtlebot4_ws/src/task_offloading/offload_agent/include/offload_agent/: action.hpp  buttons.hpp  display.hpp  leds.hpp  offload_agent.hpp  turtlebot4.hpp
turtlebot4_ws/src/task_offloading/offload_agent/launch/: offload_agent_localization.launch.py
turtlebot4_ws/src/task_offloading/offload_agent/src/: buttons.cpp  display.cpp  leds.cpp  main.cpp  offload_agent.cpp  offlooad_client.cpp  turtlebot4.cpp  turtlebot4_functions.cpp
turtlebot4_ws/src/task_offloading/offload_server/: CMakeLists.txt  package.xml
turtlebot4_ws/src/task_offloading/offload_server/config/: localization.yaml  nav2.yaml
turtlebot4_ws/src/task_offloading/offload_server/include/offload_server/: offload_amcl.hpp  offload_server.hpp  offload_server_node.hpp  scheduler.hpp  utils.hpp
turtlebot4_ws/src/task_offloading/offload_server/launch/: offload_server_node.launch.py
turtlebot4_ws/src/task_offloading/offload_server/src/: main.cpp  offload_amcl.cpp  offload_costmap.cpp  offload_localization.cpp  offload_server.cpp  scheduler.cpp
turtlebot4_ws/src/task_offloading/task_action_interfaces/: CMakeLists.txt  package.xml
turtlebot4_ws/src/task_offloading/task_action_interfaces/action/: OffloadClient.action  Offloadamcl.action  Offloadcostmap.action  Offloadlocalization.action
turtlebot4_ws/src/task_offloading/task_action_interfaces/actions/: offload_amcl.action
turtlebot4_ws/src/task_offloading/task_offloading/: CMakeLists.txt  package.xml
