<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offload_server</name>
  <version>0.0.1</version>
  <description>ROS2 Package for offloading computation on server side.</description>
  <maintainer email="shulkinj@umich.edu">shulkinj</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rcutils</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>irobot_create_msgs</depend>
  <depend>bondcpp</depend>

  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_util</depend>

  <depend>task_action_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
